# advent-of-code

./: .gitconfig  .gitignore  LICENSE  README.md  requirements.txt
2015/: Cargo.toml
2015/aoc_inputs/: test
2015/src/: day1.rs  day2.rs  day3.rs  main.rs
2019/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
2019/tools/: input.py
2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  example.txt  template.txt
2020/tools/: input.py
2021/src/: day1.rs  day2.rs  main.rs
puzzles/2019/: day1.py
raoc/: Cargo.toml
raoc/src/: lib.rs  utils.rs
raoc_macro/: Cargo.toml
raoc_macro/src/: lib.rs
tools/: input.py
