[package]
name = "raoc_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
raoc = { path = "../raoc/" }
quote = "1.0.10"
syn = { version = "1.0.80", features = ["full"] }
